[Waybar] Fix spacing

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -15,8 +15,7 @@ window#waybar {
 /*-----module groups----*/
 .modules-right {
 	background-color: rgba(0,43,51,0.85);
-	margin: 2px;
-    /* margin: 2px 10px 0 0; */
+    margin: 2px 10px 0 0;
 	padding: 2px;
 }
 .modules-center {
@@ -24,8 +23,7 @@ window#waybar {
     margin: 2px 0 0 0;
 }
 .modules-left {
-    /* margin: 2px 0 0 5px; */
-	margin: 2px;
+    margin: 2px 0 0 5px;
 	background-color: rgba(0,119,179,0.6);
 	padding: 2px;
 }
